--- a/page2.html
+++ b/page2.html
@@ -10,8 +10,7 @@
     <script src="https://kit.fontawesome.com/aa71811ed5.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="style_page1.css">
-
+    <link rel="stylesheet" href="style_page2.css">
 </head>
 
 <body>
@@ -26,24 +25,7 @@
 </div>
 
 <!--IMAGE-->
-
-<div class="img">
-
-    <div>
-        <a href="page2.html"target="_blank"><img class="img-haut-g zoom-out" src="images/image1.jpg"></a>
-    </div>
-    <div>
-        <a href=""><img class="img-haut-d zoom-out" src="images/image2.jpg"></a>
-    </div>
-    <div>
-        <div id="slider">
-            <a href="#"><img class="img-bas zoom-out" src="images/image1.jpg"></a>
-            <a href="#"><img class="img-bas zoom-out" src="images/image2.jpg"></a>
-            <a href="#"><img class="img-bas zoom-out" src="images/image3.jpg"></a>
-            <a href="#"><img class="img-bas zoom-out" src="images/image1.jpg"></a>
-        </div>
-    </div>
-</div>
+<div class="img"></div>
 
 <!--SECTION ARTICLE-->
 <div class="articles">
@@ -53,8 +35,7 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
             Aut deserunt, eos et eum exercitationem fuga id illum magnam
             minus necessitatibus nemo neque nobis praesentium quia quod
-            reprehenderit sapiente velit voluptate.Aut deserunt, eos et
-            eum exercitationem Lorem ipsum dolor sit amet.</p>
+            reprehenderit sapiente velit voluptate.</p>
     </div>
 
     <div class="box article2">
@@ -63,8 +44,7 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
             Aut deserunt, eos et eum exercitationem fuga id illum magnam
             minus necessitatibus nemo neque nobis praesentium quia quod
-            reprehenderit sapiente velit voluptate.Aut deserunt, eos et
-            eum exercitationem Lorem ipsum dolor sit amet.</p>
+            reprehenderit sapiente velit voluptate.</p>
     </div>
 
     <div class="box article3">
@@ -73,16 +53,24 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
             Aut deserunt, eos et eum exercitationem fuga id illum magnam
             minus necessitatibus nemo neque nobis praesentium quia quod
-            reprehenderit sapiente velit voluptate.Aut deserunt, eos et
-            eum exercitationem Lorem ipsum dolor sit amet.</p>
+            reprehenderit sapiente velit voluptate.</p>
+    </div>
+</div>
+<div>
+    <div id="vidéo">
+        <iframe width="950" height="500" src="https://www.youtube.com/embed/joIRTddJfCg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+    </div>
+    <div id="text">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br>
+            A assumenda cumque cupiditate eius excepturi expedita impedit iusto maiores molestias,<br>
+            neque omnis porro, possimus quia, quos rem sequi unde! Aperiam, exercitationem.</p>
     </div>
 </div>
 
 
-
 <!--BANNER COULEUR GAUCHE-->
 <div class="coté_gauche"></div>
-
 
 
 
