--- a/page3.html
+++ b/page3.html
@@ -17,8 +17,7 @@
 <!--HEADER-->
 <div class="header">
     <!--logo-->
-    <a href="file:///C:/Users/Utilisateur/PhpstormProjects/PSV/index_page1.html"><img title="Retour à la page principale" src="images/terravoyages.png" alt="logo du site de voyage" class="logo"></a>
-    <a href="#"><i class="fas fa-laptop" title="CLIQUEZ POUR VOUS INSCRIRE"><p class="C"></p></i></a>
+    <a href="file:///C:/Users/Utilisateur/PhpstormProjects/PSV/index_page1.html"><img title="Retour à la page principale" src="images/terravoyages.png" alt="logo du site de voyage" class="logo"></a>    <a href="#"><i class="fas fa-laptop" title="CLIQUEZ POUR VOUS INSCRIRE"><p class="C"></p></i></a>
     <i class="fas fa-plane"></i>
     <a href="#"><i class="fab fa-internet-explorer" title="CLIQUEZ POUR VOUS CONNECTER"><p class="C"></p></i></a>
     <p class="textHeader">Terra Voyage</p>
